--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AVL Tree Visualizer</title>
-    <link rel="stylesheet" href="avl_tree.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -118,6 +118,6 @@
         </div>
     </div>
 
-    <script src="avl_tree.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
